GSSO-610 Add PUT /oauth2/auth/sessions/consent endpoint (spec fix)
