# internal/httpclient-next/api/openapi.yaml
@@ -1351,6 +1351,32 @@ paths:
       summary: Lists All Consent Sessions of a Subject
       tags:
         - admin
+    put:
+      description: |-
+        This endpoint expires a subject's granted consent sessions for a specific OAuth 2.0 Client and invalidates all
+        associated OAuth 2.0 Access Tokens.
+      operationId: expireConsentSessions
+      responses:
+        "204":
+          description: |-
+            Empty responses are sent when, for example, resources are deleted. The HTTP status code for empty responses is
+            typically 201.
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/jsonError"
+          description: jsonError
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/jsonError"
+          description: jsonError
+      summary:
+        "# Revokes Consent Sessions of a Subject for a Specific OAuth 2.0 Client"
+      tags:
+        - admin
   /oauth2/auth/sessions/login:
     delete:
       description: |-
